Introduce API to update wallet
