# wallet/handler.go
@@ -3,6 +3,7 @@ package wallet
 //go:generate go run github.com/golang/mock/mockgen -source=./handler.go -destination=./mock_handler/mock_handler.go -package=mock_handler
 
 import (
+	"errors"
 	"net/http"
 
 	"github.com/KKGo-Software-engineering/fun-exercise-api/pkg/errs"
@@ -16,6 +17,7 @@ type Handler struct {
 
 type Storer interface {
 	Create(wallet *Wallet) error
+	UpdateOne(update *Wallet) error
 	Wallets(filter Filter) ([]Wallet, error)
 }
 
@@ -103,6 +105,49 @@ func (h *Handler) CreateWallet(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusCreated, wallet)
+}
+
+// UpdateWallet
+//
+//	@Summary		Update wallet
+//	@Description	Update wallet
+//	@Tags			wallet
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path	string	true	"wallet id"
+//	@Param			request	body	Request	true	"wallet request"
+//	@Success		204
+//	@Router			/api/v1/wallets/{id} [put]
+//	@Failure		400	{object}	errs.Err
+//	@Failure		404	{object}	errs.Err
+//	@Failure		500	{object}	errs.Err
+func (h *Handler) UpdateWallet(c echo.Context) error {
+	req := new(Request)
+
+	if err := c.Bind(req); err != nil {
+		return c.JSON(http.StatusBadRequest, errs.New(err.Error()))
+	}
+
+	if err := validate(req); err != nil {
+		return c.JSON(http.StatusBadRequest, errs.New(err.Error()))
+	}
+
+	if err := h.store.UpdateOne(&Wallet{
+		ID:         req.ID,
+		UserID:     req.UserID,
+		UserName:   req.UserName,
+		WalletName: req.WalletName,
+		WalletType: req.WalletType,
+		Balance:    req.Balance,
+	}); err != nil {
+		if errors.Is(err, errs.ErrNotFound) {
+			return c.JSON(http.StatusNotFound, errs.New(err.Error()))
+		}
+
+		return c.JSON(http.StatusInternalServerError, errs.New(err.Error()))
+	}
+
+	return c.NoContent(http.StatusNoContent)
 }
 
 func validate(v any) error {
